--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # InterviewBit Chrome Extension
 
-This extension is designed to help you prepare for technical interviews by providing a convenient and interactive way to practice interview questions directly from your browser.
+This extension is designed to help you prepare for technical interviews by providing a convenient and interactive way to practice interview questions directly from your browser. It replaces your new tab homepage to show random questions from available topics.
 
 ## Features
 
